--- a/p/po/pow/powerprofitlist.com.html
+++ b/p/po/pow/powerprofitlist.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the powerprofitlist.com privacy policy that was archived on 2013-06-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130628234237id_/http%3A//powerprofitlist.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the powerprofitlist.com privacy policy that was archived on 2013-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131228115954id_/http%3A//www.powerprofitlist.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Power Up Your List and Your Profits!</title>
@@ -51,7 +51,7 @@ color:#000000;cursor:pointer;cursor:hand;font-family: Verdana, Arial;font-size: 
 
 </style>
 <center>
-           <a href="http://powerprofitlist.com/bannerclick.php?id=11319" target="_blank"><img src="http://amsvc.com/ad/33654/9296" border="0"></a><br>
+           <a href="http://powerprofitlist.com/bannerclick.php?id=10832" target="_blank"><img src="http://target-safelist.com/images/468-60.gif" border="0"></a><br>
 	</center><p align="center">
 
 
