--- a/m/mo/mob/mobile88.com.html
+++ b/m/mo/mob/mobile88.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mobile88.com privacy policy that was archived on 2013-12-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131227205540id_/http%3A//www.mobile88.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mobile88.com privacy policy that was archived on 2014-02-13.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140213230149id_/http%3A//www.mobile88.com/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -13,11 +13,11 @@
 <meta name="msvalidate.01" content="C58DB7E47760BD89E96B4F414E869DC2">
 <meta name="distribution" content="global">
         <meta name="googlebot" content="index,follow">
-        <meta name="robots" content="follow, all"><meta http-equiv="cache-control" content="max-age=0"><meta http-equiv="cache-control" content="no-cache"><meta http-equiv="expires" content="0"><meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT"><meta http-equiv="pragma" content="no-cache"><link rel="bookmark" href="http://www.mobile88.com/privacy.asp"><meta name="identifier-url" content="http://www.mobile88.com/privacy.asp"><title>Mobile88: Privacy Policy</title>
+        <meta name="robots" content="follow, all"><meta http-equiv="cache-control" content="public"><meta http-equiv="expires" content="Fri, 14 Feb 2014 07:31:50 GMT"><meta http-equiv="cache-control" content="max-age=1800"><link rel="bookmark" href="http://www.mobile88.com/privacy.asp"><meta name="identifier-url" content="http://www.mobile88.com/privacy.asp"><title>Mobile88: Privacy Policy</title>
 <link rel="SHORTCUT ICON" href="/images/favicon_m88.ico">
 <link href="/css/style1.css" rel="stylesheet" type="text/css">
 <link href="/css/menu2.css" rel="stylesheet" type="text/css">
-<link rel="alternate" type="application/rss+xml" title="Latest Malaysia news on cellphone, mobile technology, Tablet, Ultrabook, technology, telco, cellphone prices offer, cellphone info updates by mobile88.com" href="http://www.mobile88.comhttp://www.mobile88.com/news/feed/"><!-- Google Analytics -->
+<link rel="alternate" type="application/rss+xml" title="Latest Malaysia news on cellphone, mobile technology, Tablet, Ultrabook, technology, telco, cellphone prices offer, cellphone info updates by mobile88.com" href="http://www.mobile88.com"><!-- Google Analytics -->
 <script id="twitter-wjs" src="//platform.twitter.com/widgets.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script async="" src="https://sb.scorecardresearch.com/beacon.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-187036-2']);
@@ -89,8 +89,10 @@ googletag.enableServices();
 
 <!-- include virtual="include/mobile_detectcom2.asp" -->
 <script type="text/javascript" src="http://cdn.innity.net/admanager.js"></script>
+
 <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
 <script type="text/javascript">stLight.options({publisher: "1954b07c-46fb-48d5-ac5a-7626d67fd620", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
+
 </head>
 <body>
 <!-- Zone Tag : Mobile88 MY Floating Banner_MY -->
@@ -126,7 +128,7 @@ innity_ord = "ord=[timestamp]";
                      <ul class="greybox m1">
                         <li><a href="http://www.mobile88.com/news/local/">Local News</a></li>
                         <li><a href="http://www.mobile88.com/news/international/">International News</a></li>
-                        <li><a href="/news/tipsntricks.asp">Tips &amp; Tricks</a></li>
+                        <!-- <li><a href="/news/tipsntricks.asp">Tips &amp; Tricks</a></li> -->
                         <li><a href="/news/appreviews.asp">App Reviews</a></li>
 						<li><a href="http://www.mobile88.com/gaming/">Game Reviews</a></li>
                         <li><a href="http://www.mobile88.com/news/feature/">Features</a></li>
@@ -227,9 +229,9 @@ innity_ord = "ord=[timestamp]";
 		</div>
 </li><!-- end buy sell -->
 
-<!-- Commented by YH
-<li class="menu nosubmenu"><a href="/girls-Insight/" class="drop">Girl's Insight</a>
-</li>--><!-- end girl-insight -->
+
+<li class="menu nosubmenu"><a href="http://bit.ly/1eeBwd1" class="drop" target="_blank"><span id="flashytest">Games <font style="vertical-align: super;font-size:9px;">New !</font></span></a>
+</li><!-- end games -->
 
 <!--<li class="menu nosubmenu">
 <a class="drop" style="display: block;text-indent: -9999px;width: 120px;margin-top: -21px;">
@@ -251,7 +253,7 @@ innity_ord = "ord=[timestamp]";
 		
 
 
-			<div id="div-gpt-ad-1352688926071-0">
+			<div id="div-gpt-ad-1352688926071-0" style="width: 728px; float: left;">
 			<script type="text/javascript">
 			googletag.display('div-gpt-ad-1352688926071-0');
 			</script>
@@ -356,7 +358,7 @@ information and securitizing of our database servers.
 our database to not receive future communications or to no longer receive our 
 service.
 </p><p>
-<br>You can send an email to <a href="mailto:webmaster@mobile88.com"><img src="/images/email_webmaster.gif" width="159" border="0"></a></p><p>
+<br>You can send an email to <a href="mailto:g.nexlab@mobile88.com.my">g.nexlab@mobile88.com.my</a></p><p>
 <br><span class="subtitle">Changes to this Privacy Policy</span><br>
 Mobile88.com will amend this policy from time to time. It is your responsibility 
 to check this page frequently if you wish to be made aware of such changes.
@@ -364,14 +366,17 @@ to check this page frequently if you wish to be made aware of such changes.
 
 </div>	
 <div id="rightbarv2">
-	<div id="onecolumn">
-		<!-- ROS_Rectangle -->
-		<div id="div-gpt-ad-1353490793546-0" style="width:300px; height:250px;">
-		<script type="text/javascript">
-		googletag.display('div-gpt-ad-1353490793546-0');
-		</script>
-		</div>
-		</div>
+	<div id="onecolumn"><!-- Ad Tag: Mobile 88 - Nokia Lumia 1520 Sustenance -->
+<script type="text/javascript">
+innity_country = "MY";
+innity_path = "/201401_9448/32173/";
+innity_proxy = "proxy_98463";
+innity_ord = "ord=%%CACHEBUSTER%%";
+innity_pcu = "%%CLICK_URL_UNESC%%";
+</script>
+<script type="text/javascript" src="http://cdn.innity.net/global.js"></script>
+<noscript><a href="http://avn.innity.com/click/?adid=98463&cb=27341" target="_blank">
+<img src="http://avn.innity.com/view/alt/?campaignid=9448&adid=98463&cb=27341" border="0" width="0" height="0" title="Click Here"></a></noscript></div>
     
 	<div id="onecolumn"><div class="rightbox">
 
@@ -408,7 +413,13 @@ to check this page frequently if you wish to be made aware of such changes.
 <a href="https://twitter.com/mobile88" class="twitter-follow-button" data-show-count="false">Follow @mobile88</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script><br>
 
-
+<div class="breakline2"></div><div class="clear"></div><div class="clear"></div>
+<span class="righttitle"><a href="/mobilegallery/phonesearch.asp" class="login-flat-button" style="font-size:11px;background-color:green;">Search &amp; Compare Cellphone</a></span>
+<div class="clear"></div><div class="clear"></div><div class="breakline2"></div><div class="clear"></div>
+<span class="righttitle"><a href="/news/vs-comparison" class="login-flat-button" style="font-size:11px;background-color:#006633;">Phones Comparison Review</a></span>
+<div class="clear"></div><div class="clear"></div><div class="breakline2"></div><div class="clear"></div>
+<span class="righttitle"><a href="/mobilegallery/phonerank.asp" class="login-flat-button" style="font-size:11px;background-color:#0066FF;">WEEKLY TOP 10 Cellphone</a></span>
+<div class="clear"></div><div class="clear"></div><div class="clear"></div>
 </div></div>
 </div>
 	<div id="onecolumn"><div class="rightbox">
@@ -419,22 +430,18 @@ Check out the latest prices for Mobile Phones in Malaysia
 <div class="rightfirst colname">Device</div>
 <div class="right2nd colname">Price from RM</div>
 </div>
-<div class="colbg"><div class="rightfirst colname">Last Updated On: December 26, 2013</div><div class="right2nd colname">&nbsp;</div></div><div class="rightfirst"><a href="/cellphone/apple/apple-iphone-5s/price.asp">Apple iPhone 5S</a></div><div class="right2nd">2,399</div><div class="rightfirst"><a href="/cellphone/apple/apple-iphone-5c/price.asp">Apple iPhone 5C</a></div><div class="right2nd">1,899</div><div class="rightfirst"><a href="/cellphone/huawei/huawei-mediapad-7-youth/price.asp">Huawei MediaPad 7 Youth</a></div><div class="right2nd">699</div><div class="rightfirst"><a href="/cellphone/samsung/samsung-galaxy-note-3/price.asp">Samsung Galaxy Note 3</a></div><div class="right2nd">2,010</div><div class="rightfirst"><a href="/cellphone/samsung/samsung-galaxy-note-iii/price.asp">Samsung Galaxy Note III</a></div><div class="right2nd">2,010</div><div class="rightfirst"><a href="/cellphone/samsung/samsung-galaxy-note-10.1-2014-edition/price.asp">Samsung Galaxy Note 10.1 2014 Edition</a></div><div class="right2nd">2,299</div><div class="rightfirst"><a href="/cellphone/samsung/samsung-galaxy-gear/price.asp">Samsung GALAXY Gear</a></div><div class="right2nd">999</div><div class="rightfirst"><a href="/cellphone/samsung/samsung-galaxy-tab-3-kids/price.asp">Samsung GALAXY Tab 3 Kids</a></div><div class="right2nd">799</div><div class="rightfirst"><a href="/cellphone/sony/sony-xperia-z-ultra/price.asp">Sony Xperia Z Ultra</a></div><div class="right2nd">1,800</div><div class="rightfirst"><a href="/cellphone/sony/sony-xperia-z1/price.asp">Sony Xperia Z1</a></div><div class="right2nd">2,020</div>
+<div class="colbg"><div class="rightfirst colname">Last Updated On: February 13, 2014</div><div class="right2nd colname">&nbsp;</div></div><div class="rightfirst"><a href="/cellphone/apple/apple-iphone-5/price.asp">Apple iPhone 5</a></div><div class="right2nd">2,059</div><div class="rightfirst"><a href="/cellphone/apple/apple-iphone-5s/price.asp">Apple iPhone 5S</a></div><div class="right2nd">2,399</div><div class="rightfirst"><a href="/cellphone/apple/apple-iphone-5c/price.asp">Apple iPhone 5C</a></div><div class="right2nd">1,899</div><div class="rightfirst"><a href="/cellphone/pebble/pebble-smartwatch/price.asp">Pebble SmartWatch</a></div><div class="right2nd">489</div><div class="rightfirst"><a href="/cellphone/htc/htc-one/price.asp">HTC One</a></div><div class="right2nd">1,754</div><div class="rightfirst"><a href="/cellphone/sony/sony-xperia-z/price.asp">Sony Xperia Z</a></div><div class="right2nd">1,394</div><div class="rightfirst"><a href="/cellphone/sony/sony-xperia-zl/price.asp">Sony Xperia ZL</a></div><div class="right2nd">1,239</div><div class="rightfirst"><a href="/cellphone/sony/sony-xperia-zr/price.asp">Sony Xperia ZR</a></div><div class="right2nd">1,194</div><div class="rightfirst"><a href="/cellphone/sony/sony-xperia-z-ultra/price.asp">Sony Xperia Z Ultra</a></div><div class="right2nd">1,754</div><div class="rightfirst"><a href="/cellphone/sony/sony-xperia-z1/price.asp">Sony Xperia Z1</a></div><div class="right2nd">2,029</div>
 
 <div class="colbg">
 <div class="rightone colname"><span style="line-height: 30px">For more prices, click here</span>
 <span class="greybtn" style="float: right; margin-right: 15px"><a href="/eprice/">phone price list</a></span></div></div>
 </div>
 </div>	</div>
-	<div id="onecolumn"><div id="col" style="width:175px">
-
-<!-- MY_160x600 -->
-<div id="div-gpt-ad-1352688647826-0" style="width:160px; height:600px;">
+	<div id="onecolumn"><!-- MY_300x600 -->
+<div id="div-gpt-ad-1366687078585-0" style="width:300px; height:600px;">
 <script type="text/javascript">
-googletag.display('div-gpt-ad-1352688647826-0');
+googletag.display('div-gpt-ad-1366687078585-0');
 </script>
-</div>
-
 </div>
 </div>
 </div><div id="site-left" style="z-index:-1;">
@@ -508,7 +515,7 @@ if (navigator.userAgent.match(/iPhone|iPad|iPod|Android|Blackberry|IEMobile/i)) 
 
 <div id="onecolumn">
 <ul>
-<li class="copyright">mobile88.com © 2000 - 2013. All Rights Reserved.</li>
+<li class="copyright">mobile88.com © 2000 - 2014. All Rights Reserved.</li>
 <li><a href="/terms.asp" class="copyright">Terms of Use</a> | </li>
 <li><a href="/privacy.asp" class="copyright">Privacy Policy</a> | </li>
 <li><a href="/comment-discussion-policy.asp" class="copyright">Comment and Discussion Policy</a></li>
@@ -519,13 +526,15 @@ if (navigator.userAgent.match(/iPhone|iPad|iPod|Android|Blackberry|IEMobile/i)) 
 
 </div><!-- end ft -->
 </div><!-- end ftw -->
-<!--<script type="text/javascript" src="http://www.google.com/coop/cse/brand?form=cse-search-box&amp;lang=en"></script>-->
-<script type="text/javascript" src="../../js/cse_searchbox.js"></script>
+<!--<script type="text/javascript" src="http://www.google.com/coop/cse/brand?form=cse-search-box&amp;lang=en"></script>
+<script type="text/javascript" src="../../../js/cse_searchbox.js"></script>
+-->
 <script type="text/javascript">var switchTo5x=true;</script>
 <script type="text/javascript" src="http://www.mobile88.com/js/share.js"></script>
+<!-- Yi Hoong - Removed due to clashes with slidemenu javascript
+<script type="text/javascript" src="../../js/menu_blink.js"></script>
+-->
 <script type="text/javascript">stLight.options({publisher: "706c321f-68a9-4278-8479-b23e6393a364"}); </script>
-
-
 </div> <!-- end wrap -->
 
 </body></html>
