--- a/m/mi/mil/millionshort.com.html
+++ b/m/mi/mil/millionshort.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the millionshort.com privacy policy that was archived on 2013-10-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131021013847id_/http%3A//millionshort.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the millionshort.com privacy policy that was archived on 2014-02-13.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140213231409id_/https%3A//millionshort.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
   <meta charset="utf-8">
@@ -37,18 +37,20 @@
 	</script>
 	<div class="global-nav clearfix">
 		<ul class="tabs clearfix">
-			<li class="icon-web current"><a href="/search.php?q=&amp;remove=10k&amp;section=Web">Web</a></li>		</ul>
+			<li class="icon-web current"><a href="/search.php?q=&amp;remove=0&amp;section=Web">Web</a></li>		</ul>
 		<ul class="uni-nav clearfix">
-			<li><a href="/about.php">About</a></li>
+			<li><a href="/about.html">About</a></li>
+			<li><a href="/events.html">Events</a></li>
+			<li><a href="/jobs.html">Jobs</a></li>
 			<li><a href="/feedback.html">Give us feedback</a></li>
 			<li><a href="/feedback.html">Contact</a></li>
-			<li class="addsearch"><a onclick="return addEngine('http://www.millionshort.com/opensearch_desc.xml');" href="http://www.millionshort.com/opensearch_desc.xml">Add MillionShort</a></li>
+			<li class="addsearch"><a onclick="return addEngine('https://millionshort.com/opensearch_desc.xml');" href="https://millionshort.com/opensearch_desc.xml">Add MillionShort</a></li>
 			<li><a href="/advertise.php">Advertise</a></li>
 		</ul>
 	</div><!-- end global-nav -->
 			<div class="uni-head clearfix">
-			<a href="index.html" title="MillionShort Home"><img class="uni-head-logo" src="logo-small.png" title="MillionShort" width="119px"></a>
-			<a href="http://milliontall.com/privacy.php" class="btn-invert">Invert Results to Million Tall</a>
+			<a href="/index.html" title="MillionShort Home"><img class="uni-head-logo" src="/logo-small.png" title="MillionShort" width="119px"></a>
+			<a href="//s.milliontall.com/privacy.php" class="btn-invert">Invert Results to Million Tall</a>
 			<div class="uni-search clearfix">
 				<form method="get" id="search_form" action="/search.php">
 					<input type="hidden" name="section" value="Web">
@@ -58,7 +60,7 @@
 													</li>
 						<li>
 							<select name="remove" data-placeholder="Remove the top" style="width:220px; height:27px;" class="chzn-select" tabindex="5">
-								<option value="1000k">Remove top million sites from results</option><option value="100k">Remove top 100k sites from results</option><option selected="" value="10k">Remove top 10k sites from results</option><option value="1k">Remove top 1000 sites from results</option><option value="100">Remove top 100 sites from results</option><option value="0">Don't remove any sites</option>							</select>
+								<option value="1000k">Remove top million sites from results</option><option value="100k">Remove top 100k sites from results</option><option value="10k">Remove top 10k sites from results</option><option value="1k">Remove top 1000 sites from results</option><option value="100">Remove top 100 sites from results</option><option selected="" value="0">Don't remove any sites</option>							</select>
 						</li>
 						<li><input type="submit" value="search"> </li>
 					</ul>
@@ -66,7 +68,7 @@
 			</div><!-- end search -->
 			<div class="share">
 				<iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.millionshort.com&amp;send=false&amp;layout=button_count&amp;width=110&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21&amp;appId=66764003218" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:110px; height:21px;" allowtransparency="true"></iframe> 
-				<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.millionshort.com" data-text="Imagine a search engine that removed top million sites from its index #cool" data-via="millionshort" data-size="small">Tweet</a>
+				<a href="https://twitter.com/share" class="twitter-share-button" data-url="https://millionshort.com" data-text="Imagine a search engine that removed top million sites from its index #cool" data-via="millionshort" data-size="small">Tweet</a>
 				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 				<g:plusone size="medium" annotation="inline" width="120"></g:plusone>
 				<script type="text/javascript">
@@ -165,7 +167,7 @@
 	<div id="footer">Exponential Labs Inc.<br>
 		<a class="about" href="about.html">About</a> 
 		<a class="feedback" href="feedback.html">Give us feedback</a> 
-		<a class="addtosearch" onclick="return addEngine('http://www.millionshort.com/opensearch_desc.xml');" href="http://www.millionshort.com/opensearch_desc.xml">Add MillionShort to your browser search</a> 
+		<a class="addtosearch" onclick="return addEngine('https://millionshort.com/opensearch_desc.xml');" href="https://millionshort.com/opensearch_desc.xml">Add MillionShort to your browser search</a> 
 		<a class="advertise" href="advertise.html">Advertise</a> 
 		<a class="advertise" href="privacy.php">Privacy Policy</a> 
 		<a class="advertise" href="terms.php">Terms</a>
