--- a/g/gr/gra/gravitypope.com.html
+++ b/g/gr/gra/gravitypope.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the gravitypope.com privacy policy that was archived on 2013-12-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131209235544id_/http%3A//www.gravitypope.com/customer-service/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gravitypope.com privacy policy that was archived on 2014-02-13.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140213233057id_/http%3A//www.gravitypope.com/customer-service/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ru"><head>
 
@@ -13,7 +13,7 @@ d.write('<sc'+'ript src="'+
 +'/siteopt.js?v=1&utmxkey='+k+'&utmx='+(x?x:'')+'&utmxx='+(xx?xx:'')+'&utmxtime='
 +new Date().valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 '" type="text/javascript" charset="utf-8"></sc'+'ript>')})();
-</script><script src="https://ssl.google-analytics.com/siteopt.js?v=1&amp;utmxkey=3742736080&amp;utmx=&amp;utmxx=&amp;utmxtime=1580478986619" type="text/javascript" charset="utf-8"></script>
+</script><script src="https://ssl.google-analytics.com/siteopt.js?v=1&amp;utmxkey=3742736080&amp;utmx=&amp;utmxx=&amp;utmxtime=1580478987153" type="text/javascript" charset="utf-8"></script>
 <!-- End of Google Website Optimizer Control Script -->
 <!-- Google Website Optimizer Tracking Script -->
 <script type="text/javascript">
@@ -34,7 +34,7 @@ d.write('<sc'+'ript src="'+
 	<link rel="favicon" href="/favicon.ico">
 <link rel="stylesheet" href="/js/fancybox/jquery.fancybox-1.3.1.css" media="screen">
 <link rel="stylesheet" href="/css/reset.css" media="screen">
-<link rel="stylesheet" href="/css/styles.css?v=10" media="screen">
+<link rel="stylesheet" href="/css/styles.css?v=14" media="screen">
 <!--[if lte IE 8]><link rel="stylesheet" href="/css/ie.css" media="screen" /><![endif]-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 <script src="/js/fancybox/jquery.fancybox-1.3.1.pack.js" type="text/javascript"></script>
@@ -94,9 +94,10 @@ d.write('<sc'+'ript src="'+
 				</div>
 
 			</div>
-
-
-
+			
+			<div class="featured-promo">
+							</div>
+			
 			<div id="navbar">
 				<div class="nav">
 					<ul>
@@ -107,6 +108,7 @@ d.write('<sc'+'ript src="'+
 					    <li><a href="/about-us">about us</a></li>
 					    <li><a href="/contact-us">contact us</a></li>
 					    <li><a href="/press">press</a></li>
+						<li><a href="/features">features</a></li>
 					    <li class="section tailored">
 					    	<a href="/clothing/home" class="btn-clothing" title="gravitypope Tailored Goods"></a></li>
 					</ul>
@@ -126,10 +128,8 @@ d.write('<sc'+'ript src="'+
 						<li><a href="/accessories">accessories+gifts</a></li>
 					</ul>
 				</div>
-
+				
 			</div>
-
-
 
 			<div id="content">
 	
@@ -156,7 +156,7 @@ d.write('<sc'+'ript src="'+
 
 			<div id="footer">
 
-			    <p>© 2001 - 2013 Gravity Pope</p>
+			    <p>© 2001 - 2014 Gravity Pope</p>
 
 			    <p><a href="/contact-us">Contact Us</a> | 
 			    <a href="/about-us">Gravity Pope Stores</a> | 
