--- a/s/sp/spi/spinity.com.html
+++ b/s/sp/spi/spinity.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the spinity.com privacy policy that was archived on 2013-08-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130816225311id_/https%3A//www.spinity.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the spinity.com privacy policy that was archived on 2014-02-13.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140213235727id_/https%3A//www.spinity.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"><html><head>
     <title>Spinity - Privacy policy</title>
@@ -58,7 +58,7 @@
 <div class="container">
     <div id="left">
         <div id="login">
-                <form action="/login" method="post" accept-charset="utf-8" enctype="application/x-www-form-urlencoded"><input type="hidden" name="authenticityToken" value="26299f730f18b0c3d7584d24b23aac31a863545f">
+                <form action="/login" method="post" accept-charset="utf-8" enctype="application/x-www-form-urlencoded"><input type="hidden" name="authenticityToken" value="ecc55807c5d433e4ea61cd31cea79c7ce93ff2e9">
         <label for="username">Username</label><br>
         <input type="text" name="username" id="username" value=""><br>
         <label for="password">Password</label><br>
@@ -72,26 +72,26 @@
 </form>        </div>
                             <div id="news">
     <h4>What's new</h4>
-                <h5>July 31, 2013</h5>
+                <h5>January 31, 2014</h5>
+        <p><a href="/home/news/2014-01-31">CD-Mania</a></p>
+            <h5>January 21, 2014</h5>
+        <p><a href="/home/news/2014-01-21">Double Luck</a></p>
+            <h5>December 23, 2013</h5>
+        <p><a href="/home/news/2013-12-23">Lucky Numbers</a></p>
+            <h5>December 5, 2013</h5>
+        <p><a href="/home/news/2013-12-05">Lucky Arrow</a></p>
+            <h5>November 26, 2013</h5>
+        <p><a href="/home/news/2013-11-26">Wild and Wild</a></p>
+            <h5>November 11, 2013</h5>
+        <p><a href="/home/news/2013-11-11">Mega Heat</a></p>
+            <h5>October 29, 2013</h5>
+        <p><a href="/home/news/2013-10-29">Wheel of Fortune</a></p>
+            <h5>October 7, 2013</h5>
+        <p><a href="/home/news/2013-10-07">Cash Raid</a></p>
+            <h5>September 19, 2013</h5>
+        <p><a href="/home/news/2013-09-19">Extra Joker</a></p>
+            <h5>July 31, 2013</h5>
         <p><a href="/home/news/2013-07-31">Free Spinner</a></p>
-            <h5>July 16, 2013</h5>
-        <p><a href="/home/news/2013-07-16">Double Dice</a></p>
-            <h5>June 25, 2013</h5>
-        <p><a href="/home/news/2013-06-25">Gunsmoke</a></p>
-            <h5>June 10, 2013</h5>
-        <p><a href="/home/news/2013-06-10">Hottimer</a></p>
-            <h5>May 27, 2013</h5>
-        <p><a href="/home/news/2013-05-27">Roman Palace</a></p>
-            <h5>May 15, 2013</h5>
-        <p><a href="/home/news/2013-05-15">Triple Action</a></p>
-            <h5>April 24, 2013</h5>
-        <p><a href="/home/news/2013-04-24">Spinity on Twitter</a></p>
-            <h5>April 17, 2013</h5>
-        <p><a href="/home/news/2013-04-17">Grand Slam</a></p>
-            <h5>April 2, 2013</h5>
-        <p><a href="/home/news/2013-04-02">Cash Boom is here</a></p>
-            <h5>March 18, 2013</h5>
-        <p><a href="/home/news/2013-03-18">Deal of Fortune</a></p>
     </div>
                 <p style="margin: 20px;"><a href="https://twitter.com/SpinityLtd" class="twitter-follow-button" data-show-count="false" data-show-screen-name="true">Follow @SpinityLtd</a></p>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
@@ -285,7 +285,7 @@ Website.</p></td>
 </div>
 <div id="footer">
     <div id="footer-left">Comments? Write to <a href="mailto:support@spinity.com">support@spinity.com</a></div>
-    <div id="footer-right">Copyright © 2004-2013
+    <div id="footer-right">Copyright © 2004-2014
  Spinity. All rights reserved.</div>
 </div>
 
