--- a/s/sa/sai/sait.ca.html
+++ b/s/sa/sai/sait.ca.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sait.ca privacy policy that was archived on 2013-10-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131013180327id_/http%3A//www.sait.ca/privacy-policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sait.ca privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214002419id_/http%3A//www.sait.ca/privacy-policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="no-js" lang="en" xmlns="http://www.w3.org/1999/xhtml"><!--<![endif]--><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -19,6 +19,13 @@
 <link type="text/css" rel="stylesheet" media="print" href="prebuilt/css/print.css">
 <link rel="stylesheet" href="prebuilt/css/jquery.fancybox-1.3.4.css">
 <script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-5BB6"></script><script async="" src="//ssl.google-analytics.com/ga.js"></script><script src="prebuilt/js/libs/modernizr-1.7.min.js"></script>
+<script type="text/javascript">
+					/* Google Analytics */
+				var _gaq=[["_setAccount","UA-245082-4"],["_trackPageview"]];
+				(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
+				g.src=("https:"==location.protocol?"//ssl":"//www")+".google-analytics.com/ga.js";
+				s.parentNode.insertBefore(g,s)}(document,"script"));
+      </script>
 </head>
 <body>
 <!--Transformed from x9408, with page type DetailPageX-->
@@ -124,28 +131,36 @@
 <a class="rvisit" href="future-students/schedule-a-visit.php">Schedule a Visit</a>
 </li>
 </ul>
+<div style="margin-bottom:7px;" class="" xmlns=""><p><a href="https://tour.sait.ca/" target="_blank"><img alt="Take the SAIT Virtual Tour. Explore SAIT &amp; our exciting community." id="vtimage" src="Images/Global/SAIT_Virtual_Tour_Ad-7.png"></a></p>
+<script type="text/javascript">
+var images = new Array(
+                                ['Images/Global/SAIT_Virtual_Tour_Ad-6.png','Understated Blue'], 
+                                ['Images/Global/SAIT_Virtual_Tour_Ad-7.png','Tall Red'], 
+                                ['Images/Global/SAIT_Virtual_Tour_Ad_red.jpg','Red Campus']
+                );
+                var l = images.length;
+                var random_no = Math.floor(l*Math.random());
+                document.getElementById("vtimage").src = images[random_no][0];
+       document.getElementById("vtimage").onclick = function() {
+									_gaq.push(['_trackEvent', 'VirtualTourAd', 'AdImage Clicked', images[random_no][1]])
+								};
+</script></div>
 <div style="margin-bottom:7px;" class="" xmlns="">
 <p><a class="fancybox-youtube" href="http://www.youtube.com/watch?v=-hXqL6O38ng&amp;modestbranding=1&amp;rel=0;border=0;autohide=1;autoplay=1"><img alt="Thumbnail shows SAIT Polytechnic in Calgary, Alberta with a video play button overlay. Text at bottom reads &quot;Why SAIT Polytechnic&quot;?" height="156" src="Images/Global/vid-player-why-sait.jpg" style="border-image: initial; border: 0px initial initial;" width="241"></a></p></div>
 <div class="mod-events" xmlns="">
 <h3>Coming Up</h3>
 <ul id="events-lists">
 <li>
-<img src="images/cal-small.png" width="32" height="32" alt="Thanksgiving Day - Institute closed">
-<span style="position:absolute;left:725px;font-size:8px;color:#fff;text-transform:uppercase;margin-top:-2px;">Oct </span>
-<span style="position:absolute;left:725px;padding-top:8px;">14</span>
-<p><a href="event-calendar/event-calendar/events/2013-10-14-thanksgiving.php">Thanksgiving Day - Institute closed</a></p>
+<img src="images/cal-small.png" width="32" height="32" alt="SAIT Polytechnic’s Alumni Reunion in Vancouver">
+<span style="position:absolute;left:725px;font-size:8px;color:#fff;text-transform:uppercase;margin-top:-2px;">Feb </span>
+<span style="position:absolute;left:725px;padding-top:8px;">15</span>
+<p><a href="event-calendar/event-calendar/events/2014-2-15-vancouver-alumni-event.php">SAIT Polytechnic’s Alumni Reunion in Vancouver</a></p>
 </li>
 <li>
-<img src="images/cal-small.png" width="32" height="32" alt="Free info session: Broadcast Systems Technology, Information Systems Technology &amp; Fast-Track IT training">
-<span style="position:absolute;left:725px;font-size:8px;color:#fff;text-transform:uppercase;margin-top:-2px;">Oct </span>
-<span style="position:absolute;left:725px;padding-top:8px;">16</span>
-<p><a href="event-calendar/event-calendar/events/2013-10-16-free-info-session-ict.php">Free info session: Broadcast Systems Technology, Information Systems Technology &amp; Fast-Track IT training</a></p>
-</li>
-<li>
-<img src="images/cal-small.png" width="32" height="32" alt="Free info session: School of Construction Degree, Diploma, Fast-Track and Trades programs">
-<span style="position:absolute;left:725px;font-size:8px;color:#fff;text-transform:uppercase;margin-top:-2px;">Oct </span>
-<span style="position:absolute;left:725px;padding-top:8px;">16</span>
-<p><a href="event-calendar/event-calendar/events/2013-10-16-free-info-session-construction-programs.php">Free info session: Construction Degree, Diploma, Fast-Track and Trades programs</a></p>
+<img src="images/cal-small.png" width="32" height="32" alt="Reading Week begins">
+<span style="position:absolute;left:725px;font-size:8px;color:#fff;text-transform:uppercase;margin-top:-2px;">Feb </span>
+<span style="position:absolute;left:725px;padding-top:8px;">18</span>
+<p><a href="event-calendar/event-calendar/events/2014-2-18-reading-week-begins.php">Reading Week begins</a></p>
 </li>
 <li class="view-all"><p><a href="http://www.sait.ca/calendar.php">View All</a></p></li>
 </ul>
@@ -156,7 +171,7 @@
 <a href="http://www.facebook.com/SAITPolytechnic" target="_blank">Follow SAIT on Facebook</a>
 </li>
 <li class="twitter">
-<a href="http://www.twitter.com/saitpolytechnic" target="_blank">Follow SAIT on Twitter</a>
+<a href="https://twitter.com/SAITPolytechnic" target="_blank">Follow SAIT on Twitter</a>
 </li>
 </ul>
 </div>
@@ -246,6 +261,9 @@
 <li>
 <a href="future-students/explore-sait/transit-and-parking.php">Transit &amp; Parking</a>
 </li>
+<li>
+<a href="https://tour.sait.ca" target="_blank">SAIT Virtual Tour</a>
+</li>
 </ul>
 </div>
 <div class="col col-4">
@@ -287,13 +305,6 @@
 </div>
 </div>
 <div class="privacy">
-<div id="footerLogos">
-<ul>
-<li><a class="link1" href="http://www.sait.ca/about-sait/news/news/2013-2-6-sait-polytechnic-one-of-albertas-top-employers-for-2013.php">SAIT POLYTECHNIC ONE OF ALBERTAS TOP EMPLOYERS FOR 2013</a></li>
-<li><a class="link2" href="http://www.sait.ca/about-sait/news/news/2013-5-28-sait-employees-get-albertas-best-learning.php">SAIT EMPLOYEES GET ALBERTA'S BEST LEARNING</a></li>
-<li><a class="link3" href="http://www.sait.ca/about-sait/news/news/2013-6-4-health-and-safety-a-top-priority-at-sait-polytechnic.php">HEALTH AND SAFETY A TOP PRIORITY AT SAIT POLYTECHNIC</a></li>
-</ul>
-</div>
 <a href="privacy-policy.php">Privacy Policy</a> | <a href="contact-us-main-sait-contact-page.php">Contact Us</a>
 </div>
 <script type="text/javascript">
@@ -322,12 +333,6 @@
 			addthis_pub = 'dratke'; 
 			addthis_brand = 'SAIT Polytechnic';
 			addthis_options = 'favorites, email, facebook, twitter, digg, delicious, myspace, live, google, more';
-				
-			/* Google Analytics */
-			var _gaq=[["_setAccount","UA-245082-4"],["_trackPageview"]];
-			(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
-			g.src=("https:"==location.protocol?"//ssl":"//www")+".google-analytics.com/ga.js";
-			s.parentNode.insertBefore(g,s)}(document,"script"));
 		</script>
 			
 			<!-- Google Tag Manager -->
@@ -362,4 +367,4 @@
 	
 	
 
-<script type="text/javascript" src="http://siteintercept.qualtrics.com/WRSiteInterceptEngine/?Q_ZID=ZN_9HxUFWBxQOrHBEV&amp;Q_LOC=https%3A%2F%2Fweb.archive.org%2Fweb%2F20131013180327id_%2Fhttp%253A%2F%2Fwww.sait.ca%2Fprivacy-policy.php&amp;t=1580474974180"></script></body></html>
+<script type="text/javascript" src="http://siteintercept.qualtrics.com/WRSiteInterceptEngine/?Q_ZID=ZN_9HxUFWBxQOrHBEV&amp;Q_LOC=https%3A%2F%2Fweb.archive.org%2Fweb%2F20140214002419id_%2Fhttp%253A%2F%2Fwww.sait.ca%2Fprivacy-policy.php&amp;t=1580474975736"></script></body></html>
