--- a/p/pa/pag/pageresource.com.html
+++ b/p/pa/pag/pageresource.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pageresource.com privacy policy that was archived on 2013-08-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130808033451id_/http%3A//www.pageresource.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pageresource.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214002506id_/http%3A//www.pageresource.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 
@@ -47,6 +47,8 @@
 <a href="http://www.pageresource.com/dhtml/ryan/">Ryan's DHTML Tutorial</a><br>
 <a href="http://www.pageresource.com/cgirec/">CGI and Perl</a><br>
 <a href="http://www.pageresource.com/putweb/">Put Your Page Online</a><br>
+<a href="http://www.pageresource.com/clipart/">Free Clipart</a><br>
+<a href="http://www.pageresource.com/wallpapers/">Desktop Wallpapers</a><br>
 </div>
 <br>
 <br><br>
